# paras-marketplace-contract

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TESTING-ENGLISH-BID.md  TESTING-PAYMENT-OFFER.md  TESTING-PAYMENT.md  _rust_setup.sh  build.sh  package.json
contract/: Cargo.toml
contract/src/: external.rs  lib.rs  nft_callbacks.rs
paras-marketplace-contract/: Cargo.toml
paras-marketplace-contract/src/: external.rs  ft_callbacks.rs  lib.rs  nft_callbacks.rs
release/: paras_marketplace_contract.wasm
test/: api.test.js  config.js  marketplace-test.js  near-utils.js  test-utils.js
test-scripts/: test-trade.js
test-scripts/helpers/: Near.js
tests/: simulation_tests.rs  utils.rs
